<resources>
    <string name="app_name">LitLore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to Litlore, %1$s!</string>
    <string name="search_hint">Search by title or author</string>
    <string name="search_button_text">Go</string>
    <string name="home_button">Home</string>
    <string name="profile_button">Profile</string>
    <string name="hot_books_text"> 🔥 Top Rated Books</string>
    <string name="book_cover_image">Book Cover</string>
    <string name="browse_by_genre"> 📚 Browse by Genre</string>
    <string name="genre">Genre</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="book_description_goes_here">Book description goes here…</string>
    <string name="book_author">Author: %1$s</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="username">username:</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="add_review">Post Review</string>
    <string name="reviews_header">Reviews</string>
    <string name="enter_comment">Type your comment here!</string>
    <string name="post_review">post</string>
    <string name="post_review_title">Post Your Review</string>
    <string name="cancel">cancel</string>
    <string name="create_account">Create Account</string>
    <string name="password">password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="proceed_to_login">Proceed to Login</string>
    <string name="review_comment">Review Comment</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">delete review</string>
    <string name="confirm_delete_review">Are you sure you want to delete this review?</string>
    <string name="profile_pic_desc">profile Pic</string>
    <string name="Followers">Followers: </string>
    <string name="following">Following: </string>
    <string name="past_reviews">Reviews History</string>
    <string name="Hello">Hello, %1$s!</string>
    <string name="saved_books_button">Saved Books</string>
    <string name="your_saved_books">Your Saved Books</string>
    <string name="profile_edit_review_button">profile edit review button</string>
    <string name="profile_delete_review_button">Profile delete review button</string>
    <string name="book_cover_for_profile_review">Book cover for profile review</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="search_users_button">search_users_button</string>
    <string name="search_user_hint">Search by username</string>
    <string name="follow">Follow</string>
    <string name="username_item">Username</string>
    <string name="followed_user">Followed %1$s</string>
    <string name="unfollowed_user">Unfollowed %1$s</string>
    <string name="followers_count">Followers: %1$d</string>
    <string name="following_count">Following: %1$d</string>
    <string name="Follow">Follow</string>
    <string name="comment_required">Require Comment message</string>
    <string name="rating_required">Rating Required</string>
    <string name="Following">Following</string>

</resources>