...
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home"
        android:title=""
        android:contentDescription="@string/home_button" />
    <item
        android:id="@+id/nav_saved_books"
        android:icon="@drawable/nav_saved_books"
        android:title=""
        android:contentDescription="@string/saved_books_button" />
    <item
        android:id="@+id/search_users"
        android:icon="@drawable/search_user"
...
